added title and timeline items

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav id="navbar">
     <div class="container">
       <a href="#">
-        <img src="">LOGO
+        <img src=""><!--LOGO-->
       </a>
 
       <div class="nav__links">
@@ -41,20 +41,17 @@
       <div class="landing-page-shadow">
         <div class="container">
           <div class="landing-page-text">
-            <h1>Hasło reklamowe...</h1>
+            <h1>Liga typerów</h1>
 
             <h2>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's
-              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-              to make a type specimen book.
+              Kochasz sport i rywalizację? Ta aplikacja jest stworzona dla Ciebie! Dzięki naszej aplikacji możesz rywalizować ze znajomymi, typując dokładne wyniki oraz rezultaty meczów piłkarskich i nie tylko!
             </h2>
-            <button class="btn btn_landing-page">Zobacz więcej</button>
+            <button class="btn btn_landing-page"><a href="#features">Zobacz więcej</a></button>
           </div>
         </div>
       </div>
     </section>
-    <section class="features">
+    <section class="features" id="features">
       <h1>Nasza aplikacja jest</h1>
       <hr>
       <div class="features__list" data-aos="slide-up">
@@ -171,13 +168,21 @@
           </div>
           <div class="timeline-item" data-aos="fade-right">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">13.05.2021</div>
+            <div class="timeline-date">14.05.2021</div>
             <div class="timeline-content">
               <h3>Drugie spotkanie</h3>
-              <p>Przedstawienie wstępnych pomysłów, konfiguracja platformy Trello oraz zapoznanie się z regulaminem</p>
+              <p>Konfiguracja platformy Trello oraz zapoznanie się z regulaminem</p>
             </div>
           </div>
           <div class="timeline-item" data-aos="fade-left">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">14.05.2021</div>
+            <div class="timeline-content">
+              <h3>Drugie spotkanie</h3>
+              <p>Przedstawienie wstępnych pomysłów na temat projektu</p>
+            </div>
+          </div>
+          <div class="timeline-item" data-aos="fade-right">
             <div class="timeline-dot"></div>
             <div class="timeline-date">25.05.2021</div>
             <div class="timeline-content">
@@ -185,39 +190,36 @@
               <p>Sprawy organizacyjne, zbieranie pomysłów oraz kryteriów wyboru najlepszego tematu</p>
             </div>
           </div>
-          <div class="timeline-item" data-aos="fade-right">
+          <div class="timeline-item" data-aos="fade-left">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">01.05.2021</div>
+            <div class="timeline-date">01.06.2021</div>
             <div class="timeline-content">
               <h3>Czwarte spotkanie</h3>
               <p>Opracowanie kryteriów wyboru tematu, stworzenie pierwszej wersji strony "wizytówki"</p>
             </div>
           </div>
-          <div class="timeline-item" data-aos="fade-left">
+          <div class="timeline-item" data-aos="fade-right">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">data</div>
+            <div class="timeline-date">10.06.2021</div>
             <div class="timeline-content">
               <h3>Piąte spotkanie</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
+              <p>Dyskusja na temat wybrania tematu, rozważenie wszystkich opcji za i przeciw, według kryteriów</p>
+            </div>
+          </div>
+          <div class="timeline-item" data-aos="fade-left">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">16.06.2021</div>
+            <div class="timeline-content">
+              <h3>Szóste spotkanie</h3>
+              <p>Definitywne wybranie tematu i rozmowa nad sposobem wykonania projektu</p>
             </div>
           </div>
           <div class="timeline-item" data-aos="fade-right">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">data</div>
-            <div class="timeline-content">
-              <h3>Szóste spotkanie</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
-            </div>
-          </div>
-          <div class="timeline-item" data-aos="fade-left">
-            <div class="timeline-dot"></div>
-            <div class="timeline-date">data</div>
+            <div class="timeline-date">22.06.2021</div>
             <div class="timeline-content">
               <h3>siódme spotkanie</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
+              <p>Spotkanie końcowe i oddanie sprawozdań przez każdego z członków zespołu</p>
             </div>
           </div>
         </div>
